# cesar

./: .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  KAMAL.md  README.md  deploy-vps.sh  docker-compose.yml  mise.toml  pyproject.toml  requirements.txt  start-server.sh  vercel.json
.context/: RESEARCH.md  backlog.md
.context/backlog/: todo.md
.kamal/: secrets
.loki/: CONTINUITY.md  SKILL.md  autonomy-state.json  dashboard-state.json  events.jsonl  loki.pid  prd-observations.md  pricing.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v2.2-MILESTONE-AUDIT.md
cesar/: __init__.py  __main__.py  association.py  cache.py  cli.py  config.py  device_detection.py  diarization.py  ffmpeg_scene_detector.py  orchestrator.py  sidecar_generator.py  speech_cue_detector.py  timestamp_aligner.py  transcriber.py  transcript_formatter.py  utils.py  video_processor.py  whisperx_wrapper.py  youtube_handler.py
config/: deploy.yml
deployment/: cesar.service  nginx.conf
docs/: architecture.md
tests/: __init__.py  test_association.py  test_cache.py  test_cli.py  test_config.py  test_diarization.py  test_file_handler.py  test_formatter.py  test_model.py  test_models.py  test_orchestrator.py  test_parallel_processing.py  test_repository.py  test_scene_detector.py  test_serve.py  test_server.py  test_sidecar.py  test_speech_cue_detector.py  test_timestamp_aligner.py  test_transcript_formatter.py  test_transcription.py  test_validation.py  test_video_processor.py  test_web.py  test_whisperx_wrapper.py  test_worker.py  test_youtube_handler.py
(+207 files in other folders)
