[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cesar"
version = "1.0.0"
description = "Offline audio transcription CLI using faster-whisper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "faster-whisper>=1.0.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.22.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.25.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
]

[project.scripts]
cesar = "cesar.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cesar*"]
